--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <header>
+        <img id="logo" src="img/logo.svg" alt="">
+    </header>
+
+    <main>
+        
+    </main>
+  
     
 </body>
 </html>
