--- a/index.html
+++ b/index.html
@@ -14,7 +14,39 @@
     </header>
 
     <main>
-        
+        <h1>
+            Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee
+        </h1>
+
+        <span class="grey">Scritto da</span> <span id="colore">The Booleaners</span>
+        <br>
+        <span class="grey">il 10/10/2020</span>
+
+        <div id="image-container">
+            <img src="img/tim-1.jpg" alt="">
+            <img src="img/tim-2.jpg" alt=""> <br>
+            <span>1st photo: Jhon.S and james.L knight foundation, by Scott Henrichsen</span> <br>
+            <span>2nd photo: Wikimedia, by Paul Clarke</span>
+        </div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span id="yellow"> At veritatis temporibus, delectus molestias officia pariatur?</span> Dolores esse aspernatur, vel corporis maiores a, necessitatibus ad vero molestiae minima unde obcaecati natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde eos quo est ea iure laborum! Quam nesciunt fugit vel ad dolorem neque rerum et consectetur nobis? Natus sequi tempora corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tempora facilis similique vero ipsa reprehenderit molestiae repellendus quam et enim minus itaque accusantium quia voluptas dicta laboriosam consectetur, doloribus sunt.</p>
+
+        <div>
+            <ul class="list">
+                <li >
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur animi harum non praesentium, inventore adipisci. Numquam eveniet magni tempore repellendus ex, magnam impedit molestias sed officiis enim quaerat. Assumenda, esse?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti distinctio? Delectus non vero esse repellendus quisquam repellat quaerat, distinctio deleniti aperiam error veritatis unde impedit maiores? Saepe, voluptas itaque?
+                </li>
+
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur animi harum non praesentium, inventore adipisci. Numquam eveniet magni tempore repellendus ex, magnam impedit molestias sed officiis enim quaerat. Assumenda, esse?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti distinctio? Delectus non vero esse repellendus quisquam repellat quaerat, distinctio deleniti aperiam error veritatis unde impedit maiores? Saepe, voluptas itaque?
+                </li>
+
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur animi harum non praesentium, inventore adipisci. Numquam eveniet magni tempore repellendus ex, magnam impedit molestias sed officiis enim quaerat. Assumenda, esse?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti distinctio? Delectus non vero esse repellendus quisquam repellat quaerat, distinctio deleniti aperiam error veritatis unde impedit maiores? Saepe, voluptas itaque?
+                </li>
+            </ul>
+        </div>
+
     </main>
   
     
