--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
             </ul>
         </div>
 
+        <table>
+            <thead>
+                <tr >
+                    <th >lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                </tr>
+
+                <tr class="rowcolor" >
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod at in recusandae reiciendis nulla tempore error voluptate excepturi mollitia vitae autem temporibus harum vel suscipit, iste dolorum alias itaque optio?</td>
+                </tr>
+
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod at in recusandae reiciendis nulla tempore error voluptate excepturi mollitia vitae autem temporibus harum vel suscipit, iste dolorum alias itaque optio?</td>
+                </tr>
+
+                <tr class="rowcolor">
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod at in recusandae reiciendis nulla tempore error voluptate excepturi mollitia vitae autem temporibus harum vel suscipit, iste dolorum alias itaque optio?</td>
+                </tr>
+            </thead>
+        </table>
+
     </main>
   
     
